[metadata]
name = ds-core-sanpier
version = 0.1.4
author = Saner Turhaner
author_email = san-pi@windowslive.com
description = A package to automize some of the steps before modeling and in the modeling stage
long_description = file: README.md
long_description_content_type = text/markdown
url = http://pypi.python.org/pypi/ds-core-sanpier
project_urls =
    Bug Tracker = http://pypi.python.org/pypi/ds-core-sanpier/issues
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
include_package_data = True
packages = find:
scripts =
    ds_core_sanpi/classifier_utils.py
    ds_core_sanpi/regressor_utils.py
    ds_core_sanpi/exploratory_data_analyzer.py
install_requires =
    catboost >= 1.0.5
    imblearn >= 0.0
    lightgbm >= 3.3.2
    lofo-importance >= 0.3.1
    matplotlib >= 3.3.4
    numpy >= 1.19.5
    pandas >= 1.1.5
    seaborn >= 0.11.1
    scikit-learn >= 0.24.2
    shap >= 0.40.0
python_requires = >= 3.6